--- a/samples/test/index.html
+++ b/samples/test/index.html
@@ -20,7 +20,7 @@
             <div class="li">2434</div>
             <div class="li">24df</div>
         </div>
-        <div class="slider">
+        <div class="slider" id="slider2">
             <div class="li">23</div>
             <div class="li">23</div>
             <div class="li">2434</div>
@@ -31,23 +31,8 @@
     <!-- <script src="/vendor/zepto.min.js"></script> -->
     <!-- <script src="http://m.hujiang.com/js/vendor/mu/mu.min.js"></script> -->
     <script src="mu.fn.js"></script>
-    <script src="mu.slider.js"></script>
+    <script src="test.js"></script>
     <script>
-        console.log($.fn);
-        
-        // $('.wrapper').swipeable({
-        //     start: function(event){
-        //         console.log(event, 'start');
-        //     },
-        //     move: function(event){
-        //         console.log(event, 'move');
-        //     },
-        //     end: function(event){
-        //         console.log(event, 'end');
-        //     }
-        // });
-        $('.slider').muslider();
-
         $('.slider').swipeable({
             start: function(event){
                 console.log(event, 'start');
@@ -59,6 +44,10 @@
             end: function(event){
                 console.log(event, 'end');
             }
+        });
+
+        var testa = $('#slider2').widget({
+            optionA: 'test'
         });
     </script>
 </body>
