--- a/samples/slidepage/index.html
+++ b/samples/slidepage/index.html
@@ -38,7 +38,8 @@
     <script src="fn.swipeable.js"></script>
     <script src="fn.slider.js"></script>
     <script>
-        var slider = new muSlider('#slider2');
+        // var slider = new muSlider('#slider2');
+        var slider1 = $('.slider').muslider();
     </script>
 </body>
 
