update slider fix some bugs

--- a/samples/slidepage/index.html
+++ b/samples/slidepage/index.html
@@ -15,18 +15,20 @@
     
     <div class="wrapper">
         here is a article
-        <div class="slide222r">
+        <div class="slider">
             <div class="li">23</div>
             <div class="li">23</div>
             <div class="li">2434</div>
             <div class="li">24df</div>
         </div>
+        <br>    
         <div class="slider" id="slider2">
             <div class="li">23</div>
             <div class="li">
                 23asdfafdsfa <br>
                 sdfasdf <br>
-                sdfasdf <br>
+                sdfasdf
+               <!--  <img src="http://i2.w.hjfile.cn/news/201507/201507063485218823.jpg" alt="">  --><br>
             </div>
             <div class="li">2434</div>
             <div class="li">24df</div>
@@ -39,7 +41,7 @@
     <script src="fn.slider.js"></script>
     <script>
         // var slider = new muSlider('#slider2');
-        var slider1 = $('.slider').muslider();
+        var slider1 = $('.slider').mulider();
     </script>
 </body>
 
