--- a/samples/cssend/index.html
+++ b/samples/cssend/index.html
@@ -5,20 +5,115 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no, minimal-ui">
     <title>demo</title>
-    <link rel="stylesheet" href="/MU/styles/base.css">
+    <link rel="stylesheet" href="/src/styles/base.css">
+    <style>
+        .block{
+            width: 100px;
+            height: 100px;
+            background-color: #CCC;
+        }
+        .btn{
+            display: inline-block;
+            padding: 10px 20px;
+            background-color: #F50;
+        }
+        .btn:active{
+            background-color: #F90;
+        }
+        .fadeIn {
+          -webkit-animation: fadeIn .3s both;
+          animation: fadeIn .3s both;
+        }
+
+        @-webkit-keyframes fadeIn {
+          0% {opacity: 0;}
+          100% {opacity: 1;}
+        }
+        @keyframes fadeIn {
+          0% {opacity: 0;}
+          100% {opacity: 1;}
+        }
+        .fadeOut {
+          -webkit-animation: fadeOut .3s both;
+          animation: fadeOut .3s both;
+        }
+
+        @-webkit-keyframes fadeOut {
+          0% {opacity: 1;}
+          100% {opacity: 0;}
+        }
+        @keyframes fadeOut {
+          0% {opacity: 1;}
+          100% {opacity: 0;}
+        }
+        .trans{
+            display: none;
+            position: absolute;
+            right: 0;
+        }
+        .show{
+            display: block;
+        }
+        .wrapper{
+            height: 100%;
+        }
+        .cursor{
+            cursor:pointer;
+        }
+    </style>
 </head>
 
-
-<body>
+<body >
     <div class="wrapper">
+        <div class="block anima fadeIn">animation</div>
+        <br>
+        <div class="block trans">transition</div>
+        <br>
+        <div class="btn cursor btn1">add</div>
+        <div class="btn cursor btn2">add2</div>
     </div>
     <!-- vendor -->
-    <script src="/MU/scripts/lib/zepto.min.js"></script>
-    <!-- <script src="scripts/lib/jquery-1.9.1.min.js"></script> -->
+    <!-- <script src="/vendor/zepto.min.js"></script> -->
+    <script src="/vendor/jq/jquery-2.1.3.min.js"></script>
     
     <!-- ###CURRENT TARGET -->
     <script src="cssend.js"></script>
     <script src="app.js"></script>
+    <script>
+        // $('.anima').onAnimationEnd(function(){
+        //     alert(1);
+        // });
+        $('.trans').addCss3('fadeIn', function(){
+            console.log(2);
+            $(this).removeClass('fadeIn');
+        });
+        
+        $('div').on('touchstart', function(){});
+        // also fixed an event on ios
+        var isAnimating = false;
+        $(document).on('click', '.btn1', function(event){
+        // $('.btn').on('click', function(){
+            if(isAnimating) return;
+            isAnimating = true;
+            $('.trans').addCss3('show fadeIn', function(){
+                $(this).removeClass('fadeIn');
+                isAnimating = false;
+                console.log(3)
+            });
+        });
+
+        $(document).on('click', '.btn2', function(event){
+        // $('.btn').on('click', function(){
+            if(isAnimating) return;
+            isAnimating = true;
+            $('.trans').addCss3('fadeOut', function(){
+                $(this).removeClass('show fadeOut');
+                isAnimating = false;
+                console.log(3)
+            });
+        });
+
+    </script>
     <!-- ### -->
 </body>
 
