--- a/samples/slidepage/index.html
+++ b/samples/slidepage/index.html
@@ -15,23 +15,25 @@
     
     <div class="wrapper">
         here is a article
+        <br>
         <div class="slider">
-            <div class="li">23</div>
-            <div class="li">23</div>
-            <div class="li">2434</div>
-            <div class="li">24df</div>
+            <div class="li">slider1</div>
+            <div class="li">slider2</div>
+            <div class="li">slider3</div>
+            <div class="li">slider4</div>
+            <div class="li">slider5</div>
         </div>
-        <br>    
+        <br>
+    </div>
+    <!-- <div class="bg"></div> -->
+    <div class="test2">
         <div class="slider" id="slider2">
-            <div class="li">23</div>
+            <div class="li">slider1</div>
             <div class="li">
-                23asdfafdsfa <br>
-                sdfasdf <br>
-                sdfasdf
-               <!--  <img src="http://i2.w.hjfile.cn/news/201507/201507063485218823.jpg" alt="">  --><br>
+                <img src="http://i2.w.hjfile.cn/news/201507/201507063485218823.jpg" alt="">
             </div>
-            <div class="li">2434</div>
-            <div class="li">24df</div>
+            <div class="li">slider3</div>
+            <div class="li">slider4</div>
         </div>
     </div>
     <!-- <script src="/vendor/jq/jquery-2.1.3.min.js"></script> -->
@@ -41,7 +43,7 @@
     <script src="fn.slider.js"></script>
     <script>
         // var slider = new muSlider('#slider2');
-        var slider1 = $('.slider').mulider();
+        $('.slider').mulider();
     </script>
 </body>
 
