--- a/samples/util/index.html
+++ b/samples/util/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no, minimal-ui">
     <meta name="Keywords" content="">
     <meta name="Description" content="">
-    <title>bubble nav</title>
+    <title>utility</title>
+    <link rel="stylesheet" href="/src/styles/base.css">
     <link rel="stylesheet" href="/src/styles/test.css">
 </head>
 
@@ -15,10 +16,11 @@
     <div class="wrapper">
         here is a article
     </div>
-    <script src="/vendor/jq/jquery-2.1.3.min.js"></script>
-    <!-- <script src="/vendor/zepto.min.js"></script> -->
-    <script src="mu.fn.js"></script>
+    <!-- <script src="/vendor/jq/jquery-2.1.3.min.js"></script> -->
+    <script src="/vendor/zepto.min.js"></script>
+    <script src="mu.util.js"></script>
     <script>
+        
     </script>
 </body>
 
