--- a/samples/patterns/index.html
+++ b/samples/patterns/index.html
@@ -29,14 +29,15 @@
         Patterns add to a developer's vocabulary, which makes communication faster.
         <br>
         Patterns that are frequently used can be improved over time by harnessing the collective experiences other developers using those patterns contribute back to the design pattern community.
-
+        
+        <button id="addNewObserver">Add New Observer checkbox</button>
+        <input id="mainCheckbox" type="checkbox"/>
+        <div id="observersContainer"></div>
     </div>
     <script src="/vendor/jq/jquery-2.1.3.min.js"></script>
     <!-- <script src="/vendor/zepto.min.js"></script> -->
     <!-- <script src="http://m.hujiang.com/js/vendor/mu/mu.min.js"></script> -->
     <script src="test.js"></script>
-    <script>
-    </script>
 </body>
 
 </html>
