--- a/samples/cssend/index.html
+++ b/samples/cssend/index.html
@@ -38,7 +38,7 @@
             $('.trans').show().oneAnimationEnd('fadeIn', function(){
                 $(this).removeClass('fadeIn');
                 console.log(1);
-                alert(1)
+                // alert(1)
                 // isAnimating = false;
             });
         });
