--- a/samples/dialog/index.html
+++ b/samples/dialog/index.html
@@ -9,19 +9,37 @@
     <title>example roeis</title>
     <link rel="stylesheet" href="/src/styles/base.css">
     <link rel="stylesheet" href="/src/styles/test.css">
+    <link rel="stylesheet" href="/src/styles/mu.dialog.css">
 </head>
 
 <body>
     
-    <div class="wrapper">
+    <div class="wrapper wrapperAll">
         here is a article
+        <div class="block">1</div>
+        <div class="block">2</div>
+        <div class="block">3</div>
+        <div class="block">4</div>
+        <div class="block">5</div>
     </div>
-    <script src="/vendor/jq/jquery-2.1.3.min.js"></script>
-    <!-- <script src="/vendor/zepto.min.js"></script> -->
+    <div class="btm-opers fix fix-bottom">
+        <div class="btn">
+            open dialog
+        </div>
+    </div>
+    <div class="mu-dialog ">
+        <div class="mu-dialog-body">
+            
+        </div>
+    </div>
+
+    <div class="mu-dialog-bglayer fade"></div>
+    <!-- <script src="/vendor/jq/jquery-2.1.3.min.js"></script> -->
+    <script src="/vendor/zepto.min.js"></script>
     <!-- <script src="http://m.hujiang.com/js/vendor/mu/mu.min.js"></script> -->
-    <script src="test.js"></script>
-    <script>
-    </script>
+    <script src="../cssend/cssend.js"></script>
+    <script src="mu.dialog.js"></script>
+    <script></script>
 </body>
 
 </html>
