--- a/samples/dialog/index.html
+++ b/samples/dialog/index.html
@@ -27,13 +27,15 @@
             open dialog
         </div>
     </div>
-    <div class="mu-dialog ">
-        <div class="mu-dialog-body">
-            
+    <div class="mu-dialog-modal">
+        <div class="mu-dialog">
+            <div class="mu-dialog-body">
+                asdfasdfadf
+            </div>
         </div>
     </div>
 
-    <div class="mu-dialog-bglayer fade"></div>
+    <div class="mu-dialog-bglayer"></div>
     <!-- <script src="/vendor/jq/jquery-2.1.3.min.js"></script> -->
     <script src="/vendor/zepto.min.js"></script>
     <!-- <script src="http://m.hujiang.com/js/vendor/mu/mu.min.js"></script> -->
