--- a/samples/require/index.html
+++ b/samples/require/index.html
@@ -19,9 +19,7 @@
     <script src="/vendor/jq/jquery-2.1.3.min.js"></script>
     <!-- <script src="/vendor/zepto.min.js"></script> -->
     <!-- <script src="http://m.hujiang.com/js/vendor/mu/mu.min.js"></script> -->
-    <script src="test.js"></script>
-    <script>
-    </script>
+    <script src="app.js"></script>
 </body>
 
 </html>
