component dialog update4

--- a/samples/slidepage/index.html
+++ b/samples/slidepage/index.html
@@ -40,6 +40,7 @@
     <script src="/vendor/zepto.min.js"></script>
     <!-- <script src="http://m.hujiang.com/js/vendor/mu/mu.min.js"></script> -->
     <script src="fn.swipeable.js"></script>
+    <script src="../cssend/cssend.js"></script>
     <script src="fn.slider.js"></script>
     <script>
         // var slider = new muSlider('#slider2');
