--- a/samples/dialog/index.html
+++ b/samples/dialog/index.html
@@ -40,9 +40,9 @@
         <div class="ws_body">
             <div class="ws_block">
                 <h3>更多精华，关注公众号</h3>
-                <div class="cf">
+                <div class="cf por">
                     <div class="pic fl">
-                        <img src="##" alt="">
+                        <img src="http://i2.w.hjfile.cn/news/201507/201507301554820611.jpg" alt="华景德语">
                     </div>
                     <div class="info">
                         <p class="p1">沪江德语</p>
@@ -65,8 +65,8 @@
     <!-- <script src="/vendor/jq/jquery-2.1.3.min.js"></script> -->
     <script src="/vendor/zepto.min.js"></script>
     <!-- <script src="http://m.hujiang.com/js/vendor/mu/mu.min.js"></script> -->
-    <script src="../cssend/cssend.js"></script>
-    <script src="mu.dialog.js"></script>
+    <script src="../fn/fn.animationend.js"></script>
+    <script src="fn.dialog.js"></script>
     <script src="fn.pop.js"></script>
     <script>
         window.dialog1 = new Dialog('.weixin_success', {
@@ -80,13 +80,13 @@
             }
         });
 
-        // $('<div class="sdf">sadfa</div>').dialog({
-        //     afterOpen: function(){
+        $('<div class="sdf">sadfa</div>').dialog({
+            afterOpen: function(){
                 
-        //     }
-        // });
+            }
+        });
 
-        // window.dialog2 = $.fn.dialog.instances['0'];
+        window.dialog2 = $.fn.dialog.instances['0'];
 
             
         $('.btn').on('click', function() {
