--- a/samples/slider/index.html
+++ b/samples/slider/index.html
@@ -44,7 +44,7 @@
     <script src="fn.slider.js"></script>
     <script>
         // var slider = new muSlider('#slider2');
-        $('.slider').mulider();
+        $('.slider').muSlider();
     </script>
 </body>
 
