whole mu solution , update slider

--- a/samples/slider/index.html
+++ b/samples/slider/index.html
@@ -14,7 +14,6 @@
 <body>
     
     <div class="wrapper">
-        here is a article
         <br>
         <div class="slider">
             <div class="li">slider1</div>
@@ -38,9 +37,7 @@
     </div>
     <!-- <script src="/vendor/jq/jquery-2.1.3.min.js"></script> -->
     <script src="/vendor/zepto.min.js"></script>
-    <!-- <script src="http://m.hujiang.com/js/vendor/mu/mu.min.js"></script> -->
-    <script src="fn.swipeable.js"></script>
-    <script src="../cssend/cssend.js"></script>
+    <script src="../util/mu.js"></script>
     <script src="fn.slider.js"></script>
     <script>
         // var slider = new muSlider('#slider2');
