whole mu solution , update readme

--- a/samples/dialog/index.html
+++ b/samples/dialog/index.html
@@ -75,7 +75,7 @@
             $env.append(html);
         }
         window.dialog1 = new MuDialog('.weixin_success', {
-            classSet: 'scaleDownIn',
+            classSet: 'fadeInRight',
             // showClass: 'mu-fadeInUp',
             beforeOpen: function(){
                 
