update page transition

--- a/samples/dialog/index.html
+++ b/samples/dialog/index.html
@@ -9,7 +9,7 @@
     <title>example roeis</title>
     <link rel="stylesheet" href="/src/styles/base.css">
     <link rel="stylesheet" href="/src/styles/test.css">
-    <link rel="stylesheet" href="/src/styles/mu.dialog.css">
+    <link rel="stylesheet" href="/src/styles/mu.css">
 </head>
 
 <body>
@@ -31,7 +31,11 @@
     </div>
     <div class="btm-opers fix fix-bottom">
     </div>
-
+    
+    <!--             ios         android
+    weixin      通过        不通过
+    UC          通过
+    QQ -->
 
     <!-- 微信回调 -->
     <div class="weixin_success" style="display:none">
