--- a/samples/pagetransition/index.html
+++ b/samples/pagetransition/index.html
@@ -8,25 +8,32 @@
     <meta name="Description" content="">
     <title>example roeis</title>
     <link rel="stylesheet" href="/src/styles/base.css">
-    <link rel="stylesheet" href="/src/styles/test.css">
     <link rel="stylesheet" href="/src/styles/mu.css">
+    <link rel="stylesheet" href="/src/styles/test.css">
 </head>
 
 <body>
     
     <div class="wrapper">
         <div class="page" style="background: #CCC;">
-            1
+            单屏切换 <br>
+            use css3 animation
         </div>
-        <div class="page">
+        <div class="page" style="background: #BBB;">
             2
         </div>
         <div class="page">
             3
         </div>
+        <div class="page" style="background: #Fc0;">
+            4
+        </div>
     </div>
-    <div class="btn fix" id="jump">
-        jump
+    <div class="btn fix" id="prev">
+        prev
+    </div>
+    <div class="btn fix" id="next">
+        next
     </div>
     <!-- <script src="/vendor/jq/jquery-2.1.3.min.js"></script> -->
 
@@ -35,14 +42,15 @@
     <script src="fn.page.transition.js"></script>
     <script>
         var page = new MuPage('.page',{
-            isLoop: false
+            isLoop: true
         });
-        $('#jump').on('click', function(){
-            page._jump(1, 'mu-moveFromBottom', 'mu-moveToTop');
+        $('#prev').on('click', function(){
+            page.prev();
         });
 
-        //
-        //
+        $('#next').on('click', function(){
+            page.next();
+        });
     </script>
 </body>
 
