update page transition readme

--- a/samples/pagetransition/index.html
+++ b/samples/pagetransition/index.html
@@ -22,7 +22,7 @@
         <div class="page" style="background: #BBB;">
             2
         </div>
-        <div class="page">
+        <div class="page" style="background: #0cF;">
             3
         </div>
         <div class="page" style="background: #Fc0;">
