--- a/samples/touchevent/index.html
+++ b/samples/touchevent/index.html
@@ -47,8 +47,8 @@
         </div>
         <div class="btn">btn</div>
     </div>
-    <script src="/vendor/jq/jquery-2.1.3.min.js"></script>
-    <!-- <script src="/vendor/zepto.min.js"></script> -->
+    <!-- <script src="/vendor/jq/jquery-2.1.3.min.js"></script> -->
+    <script src="/vendor/zepto.min.js"></script>
     <!-- <script src="touch.js"></script> -->
     <script src="mu.touch.js"></script>
     <script src="test.js"></script>
