--- a/samples/pagetransition/index.html
+++ b/samples/pagetransition/index.html
@@ -39,7 +39,7 @@
 
     <script src="/vendor/zepto.min.js"></script>
     <script src="../util/mu.js"></script>
-    <script src="fn.page.transition.js"></script>
+    <script src="mu.page.js"></script>
     <script>
         var page = new MuPage('.page',{
             isLoop: true
