--- a/samples/dialog/index.html
+++ b/samples/dialog/index.html
@@ -70,7 +70,7 @@
     <!-- <script src="/vendor/jq/jquery-2.1.3.min.js"></script> -->
     <script src="/vendor/zepto.min.js"></script>
     <script src="../util/mu.js"></script>
-    <script src="fn.dialog.js"></script>
+    <script src="mu.dialog.js"></script>
     <script>
         var $env = $('header');
         for(var key in mu.detect){
