--- a/samples/slider/index.html
+++ b/samples/slider/index.html
@@ -38,7 +38,7 @@
     <!-- <script src="/vendor/jq/jquery-2.1.3.min.js"></script> -->
     <script src="/vendor/zepto.min.js"></script>
     <script src="../util/mu.js"></script>
-    <script src="fn.slider.js"></script>
+    <script src="mu.slider.js"></script>
     <script>
         // var slider = new muSlider('#slider2');
         $('.slider').muSlider();
