--- a/samples/util/index.html
+++ b/samples/util/index.html
@@ -18,7 +18,7 @@
     </div>
     <!-- <script src="/vendor/jq/jquery-2.1.3.min.js"></script> -->
     <script src="/vendor/zepto.min.js"></script>
-    <script src="mu.util.js"></script>
+    <script src="mu.js"></script>
     <script>
         $.ajax({
             url: 'http://192.168.155.26:3000/api',
