update manual tests

--- a/manualtest/mu.html
+++ b/manualtest/mu.html
@@ -20,7 +20,7 @@
         </div>
 
         <ul class="list">
-            <li><a href="/manualtest/mu.html">工具方法</a></li>
+            <li><a href="/manualtest/util.html">工具方法</a></li>
             <li><a href="/manualtest/dialog.html">弹窗</a></li>
             <li><a href="/manualtest/pagetransition.html">页面转场</a></li>
             <li><a href="/manualtest/slider.html">轮播</a></li>
