update slider new

--- a/samples/slider/index.html
+++ b/samples/slider/index.html
@@ -40,10 +40,11 @@
     <script src="../util/mu.js"></script>
     <script src="mu.slider.js"></script>
     <script>
-        // var slider = new muSlider('#slider2');
-        $('.slider').muSlider({
+
+        var slider = new MuSlider('.slider', {
             isLoop: true
         });
+
     </script>
 </body>
 
