--- a/samples/slidepage/index.html
+++ b/samples/slidepage/index.html
@@ -18,6 +18,7 @@
         .page{
             height: 100%;
             width: 100%;
+            padding: 2rem;
         }
     </style>
 </head>
@@ -39,19 +40,14 @@
             4
         </div>
     </div>
-    <div class="btn fix" id="prev">
-        prev
-    </div>
-    <div class="btn fix" id="next">
-        next
-    </div>
     <!-- <script src="/vendor/jq/jquery-2.1.3.min.js"></script> -->
     <script src="/vendor/zepto.min.js"></script>
     <script src="../util/mu.js"></script>
     <script src="mu.slidepage.js"></script>
     <script>
         mu.util.preventScroll();
-        $('.wrapper').muSlider({
+        var slider = new MuSlider('.wrapper', {
+            // isLoop: true,
             isVert: true,
         });
     </script>
