--- a/samples/slidepage/index.html
+++ b/samples/slidepage/index.html
@@ -15,10 +15,18 @@
             height: 100%;
             width: 100%;
         }
+        .slider-wrap{
+            width: 100%;
+            height: 100%;
+        }
         .page{
             height: 100%;
             width: 100%;
             padding: 2rem;
+        }
+        .slider2{
+            height: 50px;
+            background-color: #CCC;
         }
     </style>
 </head>
@@ -31,7 +39,13 @@
             use css3 animation
         </div>
         <div class="page" style="background: #BBB;">
-            2
+            
+            <div class="slider2">
+                <li>33</li>
+                <li>33</li>
+                <li>33</li>
+                <li>33</li>
+            </div>
         </div>
         <div class="page" style="background: #0cF;">
             3
@@ -45,10 +59,14 @@
     <script src="../util/mu.js"></script>
     <script src="mu.slidepage.js"></script>
     <script>
-        mu.util.preventScroll();
+        // mu.util.preventScroll();
         var slider = new MuSlider('.wrapper', {
             // isLoop: true,
             isVert: true,
+        });
+        var slider2 = new MuSlider('.slider2', {
+            // isLoop: true,
+            // isVert: true,
         });
     </script>
 </body>
