--- a/samples/slider/slidepage.html
+++ b/samples/slider/slidepage.html
@@ -15,10 +15,6 @@
             height: 100%;
             width: 100%;
         }
-        .slider-wrap{
-            width: 100%;
-            height: 100%;
-        }
         .page{
             height: 100%;
             width: 100%;
@@ -41,10 +37,10 @@
         <div class="page" style="background: #BBB;">
             
             <div class="slider2">
-                <li>33</li>
-                <li>33</li>
-                <li>33</li>
-                <li>33</li>
+                <div>33</div>
+                <div>33</div>
+                <div>33</div>
+                <div>33</div>
             </div>
         </div>
         <div class="page" style="background: #0cF;">
@@ -57,7 +53,7 @@
     <!-- <script src="/vendor/jq/jquery-2.1.3.min.js"></script> -->
     <script src="/vendor/zepto.min.js"></script>
     <script src="../util/mu.js"></script>
-    <script src="mu.slidepage.js"></script>
+    <script src="mu.slider.js"></script>
     <script>
         // mu.util.preventScroll();
         var slider = new MuSlider('.wrapper', {
