update slider and README

--- a/manualtest/slider.html
+++ b/manualtest/slider.html
@@ -17,6 +17,8 @@
     <div class="wrapper">
         <div class="title">
             <h3>轮播</h3>
+            <p>测试点</p>
+            <p>流畅度，位置等</p>
         </div>
         <div class="slider">
             <div class="li">slider1</div>
