--- a/manualtest/pagetransition.html
+++ b/manualtest/pagetransition.html
@@ -19,7 +19,8 @@
             <div class="title">
                 <h3>单屏切换</h3>
             </div>
-            <p>use css3 animation</p>
+            <p>测试点</p>
+            <p>快速滑动或点击等极端情况的表现等</p>
         </div>
         <div class="page" style="background: #CCC;">
             2
