update slider and README

--- a/manualtest/mu.html
+++ b/manualtest/mu.html
@@ -25,6 +25,7 @@
             <li><a href="/manualtest/pagetransition.html">页面转场</a></li>
             <li><a href="/manualtest/slider.html">轮播</a></li>
             <li><a href="/manualtest/touch.html">触屏事件</a></li>
+            <li><a href="/manualtest/sliderpage.html">滑动页面</a></li>
         </ul>
 
 
