--- a/samples/slider/slider.html
+++ b/samples/slider/slider.html
@@ -40,8 +40,7 @@
     <script src="../util/mu.js"></script>
     <script src="mu.slider.js"></script>
     <script>
-
-        var slider = new MuSlider('.slider', {
+        $('.slider').muSlider({
             isLoop: true
         });
 
