--- a/manualtest/touch.html
+++ b/manualtest/touch.html
@@ -53,6 +53,7 @@
     </div>
     <!-- <script src="/vendor/jq/jquery-2.1.3.min.js"></script> -->
     <script src="/vendor/zepto.min.js"></script>
+    <script src="/dist/mu.js"></script>
     <script src="/dist/mu.touch.js"></script>
     <script>
         var $log = $('#log');
