adjust slider loop

--- a/manualtest/sliderpage.html
+++ b/manualtest/sliderpage.html
@@ -56,9 +56,8 @@
     <script src="/dist/mu.js"></script>
     <script src="/dist/mu.slider.js"></script>
     <script>
-        // mu.util.preventScroll();
         var slider = new MuSlider('.wrapper', {
-            // isLoop: true,
+            isLoop: true,
             isVert: true,
         });
     </script>
