update es6 practice

--- a/manualtest/dialog.html
+++ b/manualtest/dialog.html
@@ -71,7 +71,7 @@
             mu.util.alert('this is an alert');
         });
         $('#tip').on('click', function(){
-            mu.util.tip('this is a tip');
+            mu.util.tip('this is a tip', 500);
         });
         $('#confirm').on('click', function(){
             // confirm
