#dialog: fix firefox ,uc issue

--- a/manualtest/dialog.html
+++ b/manualtest/dialog.html
@@ -71,7 +71,7 @@
             mu.util.alert('this is an alert');
         });
         $('#tip').on('click', function(){
-            mu.util.tip('this is a tip', 500);
+            mu.util.tip('this is a tip', 1000);
         });
         $('#confirm').on('click', function(){
             // confirm
@@ -83,6 +83,7 @@
                 }
             });
         });
+        $('div').on('touchstart', function(){});
 
     </script>
 </body>
