--- a/samples/cssend/index.html
+++ b/samples/cssend/index.html
@@ -33,21 +33,18 @@
         // var isAnimating = false;
 
         $(document).on('click', '.btn1', function(event){
-            // if(isAnimating) return;
-            // isAnimating = true;
-            // $('.trans').css('visibility', 'visible').addClass('fadeIn');
 
             $('.trans').show().oneAnimationEnd('fadeIn', function(){
                 $(this).removeClass('fadeIn');
-                // console.log(1);
-                // alert(1)
-                // isAnimating = false;
             });
         });
 
         $('.trans').on(animationEvents.animationEnd, function(event){
             console.log('3');
             
+        });
+        $('.anima').on('animationend', function(event){
+            alert('433')
         });
 
         $('.trans').on(animationEvents.animationEnd+".text", function(event){
