#fix: slider, dialog in firefox etc, add log

--- a/manualtest/sliderpage.html
+++ b/manualtest/sliderpage.html
@@ -56,10 +56,13 @@
     <script src="/dist/mu.js"></script>
     <script src="/dist/mu.slider.js"></script>
     <script>
-        var slider = new MuSlider('.wrapper', {
-            isLoop: true,
-            isVert: true,
-        });
+        $(function(){
+            
+            var slider = new MuSlider('.wrapper', {
+                isLoop: true,
+                isVert: true,
+            });
+        })
     </script>
 </body>
 
