--- a/manualtest/dialog.html
+++ b/manualtest/dialog.html
@@ -7,7 +7,7 @@
     <meta name="MobileOptimized" content="320">
     <meta name="Keywords" content="">
     <meta name="Description" content="">
-    <title>example roeis</title>
+    <title>弹窗 roeis</title>
     <link rel="stylesheet" href="/src/styles/base.css">
     <link rel="stylesheet" href="/src/styles/manual.css">
     <link rel="stylesheet" href="/src/styles/mu.css">
