--- a/manualtest/touch.html
+++ b/manualtest/touch.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no, minimal-ui">
     <meta name="Keywords" content="">
     <meta name="Description" content="">
-    <title>bubble nav</title>
+    <title>触屏事件 roeis</title>
     <link rel="stylesheet" href="/src/styles/base.css">
     <link rel="stylesheet" href="/src/styles/manual.css">
     <link rel="stylesheet" href="/dist/mu.css">
