--- a/manualtest/touch.html
+++ b/manualtest/touch.html
@@ -53,7 +53,7 @@
         注意:
         1.使用swipeUp, swipeDown时，阻止全局touchmove的默认事件
           调用方法mu.util.preventScroll();
-        2.p阻止冒泡
+        2.阻止冒泡
     </div>
     <!-- <script src="/vendor/jq/jquery-2.1.3.min.js"></script> -->
     <script src="/vendor/zepto.min.js"></script>
