--- a/manualtest/dialog.html
+++ b/manualtest/dialog.html
@@ -45,7 +45,7 @@
     
     <!-- <script src="/vendor/jq/jquery-2.1.3.min.js"></script> -->
     <script src="/vendor/zepto.min.js"></script>
-    <script src="/dist/mu-2.3.0.min.js"></script>
+    <script src="/dist/mu.all.min.js"></script>
     <!-- <script src="/dist/mu.js"></script>
     <script src="/dist/mu.dialog.js"></script> -->
     <script>
