--- a/samples/dialog/index.html
+++ b/samples/dialog/index.html
@@ -78,7 +78,7 @@
             $env.append(html);
         }
         window.dialog1 = new MuDialog('.weixin_success', {
-            classSet: 'fadeInRight',
+            preset: 'fadeInDown',
             // showClass: 'mu-fadeInUp',
             beforeOpen: function(){
                 
