--- a/samples/slider/slider3.html
+++ b/samples/slider/slider3.html
@@ -46,34 +46,27 @@
                     <img src="http://i2.w.hjfile.cn/news/201507/201507063485218823.jpg" alt="">
                 </div>
             </div>
-            <div class="li">
-                <div class="box">
-                    3
-                </div>
-            </div>
-            <div class="li">
-                <div class="box">
-                    4
-                </div>
-            </div>
+           
         </div>
     </div>
 
     <!-- <script src="/vendor/jq/jquery-2.1.3.min.js"></script> -->
     <script src="/vendor/zepto.min.js"></script>
-    <script src="/dist/mu.all.min.js"></script>
+    <script src="/dist/mu.js"></script>
+    <script src="/dist/mu.dialog.js"></script>
     <script src="mu.slider.js"></script>
     <script>
+
+
+        var slider = new MuSlider('.slider2', {
+            isHidden: false
+        });
 
         var dialog = new MuDialog('.test2', {
             isCenter: false,
             afterClose: function(){
 
             }
-        });
-
-        var slider = new MuSlider('.slider2', {
-            isHidden: false
         });
 
         $('.btn-open').on('click', function(){
